--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
       </div>
     </div>
   </div>
-  <div class="background" style="background-image:url(assets/img/background/img-34.jpg)"></div>
+  <div class="background" style="background-image:url(assets/img/background/background-black.svg)"></div>
 </section>
 
 <!-- Slide 2 (#60) -->
@@ -218,7 +218,7 @@
       </div>
     </div>
   </div>
-  <div class="background" style="background-image:url(assets/img/background/img-60.jpg)"></div>
+  <div class="background" style="background-image:url(assets/img/background/background-jungle.svg)"></div>
 </section>
 
 
@@ -318,7 +318,7 @@
       </div>
     </div>
   </div>
-  <div class="background" style="background-image:url(assets/img/background/img-27.jpg)"></div>
+  <div class="background" style="background-image:url(assets/img/background/background-sea.svg)"></div>
 </section>
 
 <!-- Slide 4 (#26) -->
@@ -366,7 +366,7 @@
       </div>
     </div>
   </div>
-  <div class="background" style="background-image:url(assets/img/background/img-26.jpg)"></div>
+  <div class="background" style="background-image:url(assets/img/background/background-fire.svg)"></div>
 </section>
 
 <!-- Slide 5 (#91) -->
@@ -404,7 +404,7 @@
       </div>
     </div>
   </div>
-  <div class="background" style="background-image:url(assets/img/background/img-91.jpg)"></div>
+  <div class="background" style="background-image:url(assets/img/background/background-black.svg)"></div>
 </section>
 
 <!-- Slide 6 (#83) -->
@@ -472,7 +472,7 @@
       </div>
     </div>
   </div>
-  <div class="background" style="background-image:url(assets/img/background/img-83.jpg)"></div>
+  <div class="background" style="background-image:url(assets/img/background/background-jungle.svg)"></div>
 </section>
 
 <!-- Slide 7 (#95) -->
@@ -496,7 +496,7 @@
       </div>
     </div>
   </div>
-  <div class="background" style="background-image:url(assets/img/background/img-95.jpg)"></div>
+  <div class="background" style="background-image:url(assets/img/background/background-sea.svg)"></div>
 </section>
 
 <!-- Panel Bottom #01 -->
