--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
         </div>
       </div>
     </div>
-    <div class="background" style="background-image:url(assets/img/background/background-jungle.svg)"></div>
+    <div class="background" style="background-image:url(assets/img/background/background-jungle.jpg)"></div>
   </section>
 
   <!-- Slide 2 (#60) -->
@@ -351,7 +351,7 @@
         </div>
       </div>
     </div>
-    <div class="background" style="background-image:url(assets/img/background/background-jungle.svg)"></div>
+    <div class="background" style="background-image:url(assets/img/background/background-jungle.jpg)"></div>
   </section>
 
 
@@ -462,7 +462,7 @@
         </div>
       </div>
     </div>
-    <div class="background" style="background-image:url(assets/img/background/background-sea.svg)"></div>
+    <div class="background" style="background-image:url(assets/img/background/background-sea.jpg)"></div>
   </section>
 
   <!-- Slide 4 (#26) -->
@@ -512,7 +512,7 @@
         </div>
       </div>
     </div>
-    <div class="background" style="background-image:url(assets/img/background/background-fire.svg)"></div>
+    <div class="background" style="background-image:url(assets/img/background/background-fire.jpg)"></div>
   </section>
 
   <!-- Slide 5 (#91) -->
@@ -550,7 +550,7 @@
         </div>
       </div>
     </div>
-    <div class="background" style="background-image:url(assets/img/background/background-black.svg)"></div>
+    <div class="background" style="background-image:url(assets/img/background/background-black.jpg)"></div>
   </section>
 
   <!-- Slide 6 (#83) -->
@@ -618,7 +618,7 @@
         </div>
       </div>
     </div>
-    <div class="background" style="background-image:url(assets/img/background/background-jungle.svg)"></div>
+    <div class="background" style="background-image:url(assets/img/background/background-jungle.jpg)"></div>
   </section>
 
   <!-- Slide 7 (#95) -->
@@ -643,7 +643,7 @@
         </div>
       </div>
     </div>
-    <div class="background" style="background-image:url(assets/img/background/background-sea.svg)"></div>
+    <div class="background" style="background-image:url(assets/img/background/background-sea.jpg)"></div>
   </section>
 
   <!-- Panel Bottom #01 -->
