--- a/index.html
+++ b/index.html
@@ -297,6 +297,10 @@
               <li class="col-5-12 bottom">
                 <img src="assets/img/minimum1.jpg" data-action="zoom" class="shadow rounded ae-8"
                   alt="MiniOS Minimum" />
+                <img src="assets/img/minimum2.jpg" data-action="zoom" class="shadow rounded ae-8"
+                  alt="MiniOS Minimum" />
+                <img src="assets/img/minimum3.jpg" data-action="zoom" class="shadow rounded ae-8"
+                  alt="MiniOS Minimum" />
               </li>
             </ul>
           </div>
@@ -304,7 +308,7 @@
         </div>
       </div>
     </div>
-    <div class="background" style="background-image:url(assets/img/background/background-jungle.jpg)"></div>
+    <div class="background" style="background-image:url(assets/img/background/background-jungle.svg)"></div>
   </section>
 
   <!-- Slide 2 (#60) -->
@@ -351,7 +355,7 @@
         </div>
       </div>
     </div>
-    <div class="background" style="background-image:url(assets/img/background/background-jungle.jpg)"></div>
+    <div class="background" style="background-image:url(assets/img/background/background-jungle.svg)"></div>
   </section>
 
 
@@ -462,7 +466,7 @@
         </div>
       </div>
     </div>
-    <div class="background" style="background-image:url(assets/img/background/background-sea.jpg)"></div>
+    <div class="background" style="background-image:url(assets/img/background/background-sea.svg)"></div>
   </section>
 
   <!-- Slide 4 (#26) -->
@@ -512,7 +516,7 @@
         </div>
       </div>
     </div>
-    <div class="background" style="background-image:url(assets/img/background/background-fire.jpg)"></div>
+    <div class="background" style="background-image:url(assets/img/background/background-fire.svg)"></div>
   </section>
 
   <!-- Slide 5 (#91) -->
@@ -550,7 +554,7 @@
         </div>
       </div>
     </div>
-    <div class="background" style="background-image:url(assets/img/background/background-black.jpg)"></div>
+    <div class="background" style="background-image:url(assets/img/background/background-black.svg)"></div>
   </section>
 
   <!-- Slide 6 (#83) -->
@@ -618,7 +622,7 @@
         </div>
       </div>
     </div>
-    <div class="background" style="background-image:url(assets/img/background/background-jungle.jpg)"></div>
+    <div class="background" style="background-image:url(assets/img/background/background-jungle.svg)"></div>
   </section>
 
   <!-- Slide 7 (#95) -->
@@ -643,7 +647,7 @@
         </div>
       </div>
     </div>
-    <div class="background" style="background-image:url(assets/img/background/background-sea.jpg)"></div>
+    <div class="background" style="background-image:url(assets/img/background/background-sea.svg)"></div>
   </section>
 
   <!-- Panel Bottom #01 -->
