--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
         </div>
       </div>
     </div>
-    <div class="background" style="background-image:url(assets/img/background/background-jungle.svg)"></div>
+    <div class="background" style="background-image:url(assets/img/background/background-jungle.jpg)"></div>
   </section>
 
   <!-- Slide 2 (#60) -->
@@ -355,7 +355,7 @@
         </div>
       </div>
     </div>
-    <div class="background" style="background-image:url(assets/img/background/background-jungle.svg)"></div>
+    <div class="background" style="background-image:url(assets/img/background/background-jungle.jpg)"></div>
   </section>
 
 
@@ -466,7 +466,7 @@
         </div>
       </div>
     </div>
-    <div class="background" style="background-image:url(assets/img/background/background-sea.svg)"></div>
+    <div class="background" style="background-image:url(assets/img/background/background-sea.jpg)"></div>
   </section>
 
   <!-- Slide 4 (#26) -->
@@ -622,7 +622,7 @@
         </div>
       </div>
     </div>
-    <div class="background" style="background-image:url(assets/img/background/background-jungle.svg)"></div>
+    <div class="background" style="background-image:url(assets/img/background/background-jungle.jpg)"></div>
   </section>
 
   <!-- Slide 7 (#95) -->
@@ -647,7 +647,7 @@
         </div>
       </div>
     </div>
-    <div class="background" style="background-image:url(assets/img/background/background-sea.svg)"></div>
+    <div class="background" style="background-image:url(assets/img/background/background-sea.jpg)"></div>
   </section>
 
   <!-- Panel Bottom #01 -->
