--- a/index.html
+++ b/index.html
@@ -516,7 +516,7 @@
         </div>
       </div>
     </div>
-    <div class="background" style="background-image:url(assets/img/background/background-fire.svg)"></div>
+    <div class="background" style="background-image:url(assets/img/background/background-fire.jpg)"></div>
   </section>
 
   <!-- Slide 5 (#91) -->
