--- a/index.html
+++ b/index.html
@@ -250,6 +250,9 @@
           <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#logo-icon"></use>
         </svg></a>
       <ul class="mainMenu margin-top-3">
+        <div class="right"><a class="button green gradient" href="#">Download</a></div>
+      </ul>
+      <ul class="subMenu small opacity-8">
         <li><a href="https://t.me/minios_news" target="_blank">News</a></li>
         <li><a href="https://t.me/minios_chat" target="_blank">Discussion</a></li>
         <li><a href="https://github.com/minios-linux/minios-live/wiki/MiniOS-Docs" target="_blank">Documentation</a></li>
