--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
           <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#logo-icon"></use>
         </svg></a>
       <ul class="mainMenu margin-top-3">
-        <div class="right"><a class="button green gradient" href="#">Download</a></div>
+        <li><a href="https://t.me/minios_news" target="_blank">Download</a></li>
       </ul>
       <ul class="subMenu small opacity-8">
         <li><a href="https://t.me/minios_news" target="_blank">News</a></li>
