--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
               <li class="col-6-12 left middle">
                 <h1 class="ae-1 fromLeft">MiniOS Minimum</h1>
                 <p class="ae-2 fromLeft"><span class="opacity-8">is the smallest MiniOS and provides a basic Xfce desktop with minimal functionality.</span></p>
-                <a class="button пкуут gradient ae-3 fromCenter cropLeft">Download MiniOS Minimum</a>
+                <a class="button green gradient ae-3 fromCenter cropLeft">Download MiniOS Minimum</a>
               </li>
               <li class="col-1-12">&nbsp;</li>
               <li class="col-5-12 bottom">
