--- a/index.html
+++ b/index.html
@@ -291,13 +291,13 @@
           <div class="fix-12-12">
             <ul class="flex fixedSpaces verticalCenter reverse">
               <li class="col-6-12 left middle">
-                <h1 class="ae-1 fromLeft">MiniOS Minimum</h1>
+                <h1 class="ae-1 fromLeft">MiniOS Standard</h1>
                 <p class="ae-2 fromLeft"><span class="opacity-8">is the smallest MiniOS and provides a basic Xfce desktop with minimal functionality.</span></p>
-                <a class="button green gradient ae-3 fromCenter cropLeft">Download MiniOS Minimum</a>
+                <a class="button green gradient ae-3 fromCenter cropLeft">Download MiniOS Standard</a>
               </li>
               <li class="col-1-12">&nbsp;</li>
               <li class="col-5-12 bottom">
-                <img src="assets/img/minimum1.jpg" data-action="zoom" class="shadow rounded ae-8"
+                <img src="assets/img/standard1.jpg" data-action="zoom" class="shadow rounded ae-8"
                   alt="MiniOS Minimum" />
               </li>
             </ul>
@@ -318,13 +318,13 @@
           <div class="fix-12-12">
             <ul class="flex fixedSpaces verticalCenter reverse">
               <li class="col-6-12 left middle">
-                <h1 class="ae-1 fromLeft">MiniOS Minimum</h1>
+                <h1 class="ae-1 fromLeft">MiniOS Maximum</h1>
                 <p class="ae-2 fromLeft"><span class="opacity-8">is the smallest MiniOS and provides a basic Xfce desktop with minimal functionality.</span></p>
-                <a class="button green gradient ae-3 fromCenter cropLeft">Download MiniOS Minimum</a>
+                <a class="button green gradient ae-3 fromCenter cropLeft">Download MiniOS Maximum</a>
               </li>
               <li class="col-1-12">&nbsp;</li>
               <li class="col-5-12 bottom">
-                <img src="assets/img/minimum1.jpg" data-action="zoom" class="shadow rounded ae-8"
+                <img src="assets/img/maximum1.jpg" data-action="zoom" class="shadow rounded ae-8"
                   alt="MiniOS Minimum" />
               </li>
             </ul>
@@ -345,13 +345,13 @@
           <div class="fix-12-12">
             <ul class="flex fixedSpaces verticalCenter reverse">
               <li class="col-6-12 left middle">
-                <h1 class="ae-1 fromLeft">MiniOS Minimum</h1>
+                <h1 class="ae-1 fromLeft">MiniOS Ultra</h1>
                 <p class="ae-2 fromLeft"><span class="opacity-8">is the smallest MiniOS and provides a basic Xfce desktop with minimal functionality.</span></p>
-                <a class="button green gradient ae-3 fromCenter cropLeft">Download MiniOS Minimum</a>
+                <a class="button green gradient ae-3 fromCenter cropLeft">Download MiniOS Ultra</a>
               </li>
               <li class="col-1-12">&nbsp;</li>
               <li class="col-5-12 bottom">
-                <img src="assets/img/minimum1.jpg" data-action="zoom" class="shadow rounded ae-8"
+                <img src="assets/img/ultra1.jpg" data-action="zoom" class="shadow rounded ae-8"
                   alt="MiniOS Minimum" />
               </li>
             </ul>
