--- a/index.html
+++ b/index.html
@@ -289,16 +289,147 @@
         <div class="wrap">
 
           <div class="fix-12-12">
-            <ul class="flex fixedSpaces verticalCenter reverse">
-              <li class="col-6-12 left middle">
-                <h1 class="ae-1 fromLeft">MiniOS Standard</h1>
-                <p class="ae-2 fromLeft"><span class="opacity-8">is the smallest MiniOS and provides a basic Xfce desktop with minimal functionality.</span></p>
-                <a class="button green gradient ae-3 fromCenter cropLeft">Download MiniOS Standard</a>
+            <ul class="grid">
+              <li class="col-6-12 left">
+                <h1 class="ae-2 fromLeft">Krabi Island</h1>
+                <p class="ae-3 fromLeft"><span class="opacity-8">An electrician isn’t an opinion former, but a graphic
+                    designer is. My argument is that all graphic designers hold high levels of responsibility in
+                    society.</span></p>
+                <ul class="tabs controller uppercase bold ae-4 fromCenter" data-slider-id="60-1">
+                  <li class="selected">Krabi Island</li>
+                  <li>Community</li>
+                  <li>Surfing</li>
+                </ul>
               </li>
-              <li class="col-1-12">&nbsp;</li>
-              <li class="col-5-12 bottom">
-                <img src="assets/img/standard1.jpg" data-action="zoom" class="shadow rounded ae-8"
-                  alt="MiniOS Minimum" />
+              <li class="col-6-12 left ae-5 fromCenter">
+                <ul class="slider animated margin-top-4" data-slider-id="60-1">
+                  <li class="selected fromCenter">
+                    <div class="popupTrigger videoThumbnail shadow rounded" data-popup-id="60-1">
+                      <img class="wide" src="assets/img/gallery-60-1.jpg" alt="Video Thumbnail" />
+                    </div>
+                  </li>
+                  <li class="fromCenter">
+                    <div class="popupTrigger videoThumbnail shadow rounded" data-popup-id="60-2">
+                      <img class="wide" src="assets/img/gallery-60-2.jpg" alt="Video Thumbnail" />
+                    </div>
+                  </li>
+                  <li class="fromCenter">
+                    <div class="popupTrigger videoThumbnail shadow rounded" data-popup-id="60-3">
+                      <img class="wide" src="assets/img/gallery-60-3.jpg" alt="Video Thumbnail" />
+                    </div>
+                  </li>
+                </ul>
+              </li>
+            </ul>
+          </div>
+
+        </div>
+      </div>
+    </div>
+    <div class="background" style="background-image:url(assets/img/background/background-jungle.jpg)"></div>
+  </section>
+
+
+  <!-- Popup Video -->
+  <div class="popup autoplay" data-popup-id="60-1">
+    <div class="close"><svg>
+        <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#close"></use>
+      </svg></div>
+    <div class="content">
+      <div class="container">
+        <div class="wrap">
+          <div class="fix-10-12">
+            <div class="embedVideo popupContent">
+              <iframe src="https://player.vimeo.com/video/101231747?color=ff0179&portrait=0" frameborder="0"
+                webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
+  <!-- Popup Video -->
+  <div class="popup autoplay" data-popup-id="60-2">
+    <div class="close"><svg>
+        <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#close"></use>
+      </svg></div>
+    <div class="content">
+      <div class="container">
+        <div class="wrap">
+          <div class="fix-10-12">
+            <div class="embedVideo popupContent">
+              <iframe src="https://player.vimeo.com/video/101231747?color=ff0179&portrait=0" frameborder="0"
+                webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
+  <!-- Popup Video -->
+  <div class="popup autoplay" data-popup-id="60-3">
+    <div class="close"><svg>
+        <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#close"></use>
+      </svg></div>
+    <div class="content">
+      <div class="container">
+        <div class="wrap">
+          <div class="fix-10-12">
+            <div class="embedVideo popupContent">
+              <iframe src="https://player.vimeo.com/video/101231747?color=ff0179&portrait=0" frameborder="0"
+                webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
+  <!-- Slide 3 (#27) -->
+  <section class="slide fade-6 kenBurns">
+    <div class="content">
+      <div class="container">
+        <div class="wrap">
+
+          <div class="fix-12-12">
+            <ul class="flex verticalCenter">
+              <li class="col-5-12 cell-27">
+                <div class="fix-4-12">
+                  <ul class="slider clickable ae-1 fromAbove" data-slider-id="27-2">
+                    <li class="selected"><img src="assets/img/watch-26-2.png" alt="Apple Watch Thumbnail" /></li>
+                    <li><img src="assets/img/watch-26-1.png" alt="Apple Watch Thumbnail" /></li>
+                    <li><img src="assets/img/watch-26-2.png" alt="Apple Watch Thumbnail" /></li>
+                    <li><img src="assets/img/watch-26-1.png" alt="Apple Watch Thumbnail" /></li>
+                  </ul>
+                  <ul class="controller dots ae-2 fromCenter margin-top-3" data-slider-id="27-2">
+                    <li class="dot selected"></li>
+                    <li class="dot"></li>
+                    <li class="dot"></li>
+                    <li class="dot"></li>
+                  </ul>
+                </div>
+              </li>
+              <li class="col-7-12 left">
+                <h1 class="ae-2 fromRight">Be creative</h1>
+                <div class="ae-3 fromRight">
+                  <p class="opacity-8">When we feel less secure, with less control over our daily lives, we reach out to
+                    brands to connect with a time when things seemed&nbsp;better.</p>
+                </div>
+                <div class="relative">
+                  <img src="assets/img/icon-2.png" class="ae-3 fromCenter app-26" alt="app" />
+                  <div class="text-26">
+                    <h3 class="ae-3 fromRight">Ember for Apple Watch</h3>
+                    <div class="ae-5 fromRight">
+                      <p class="tiny opacity-6">People don&rsquo;t use a product<br>because of the great&nbsp;design.
+                      </p>
+                    </div>
+                  </div>
+                </div>
               </li>
             </ul>
           </div>
@@ -309,23 +440,46 @@
     <div class="background" style="background-image:url(assets/img/background/background-sea.jpg)"></div>
   </section>
 
-  <!-- Slide 3 (#27) -->
+  <!-- Slide 4 (#26) -->
   <section class="slide fade-6 kenBurns">
     <div class="content">
       <div class="container">
         <div class="wrap">
 
           <div class="fix-12-12">
-            <ul class="flex fixedSpaces verticalCenter reverse">
-              <li class="col-6-12 left middle">
-                <h1 class="ae-1 fromLeft">MiniOS Maximum</h1>
-                <p class="ae-2 fromLeft"><span class="opacity-8">is the smallest MiniOS and provides a basic Xfce desktop with minimal functionality.</span></p>
-                <a class="button green gradient ae-3 fromCenter cropLeft">Download MiniOS Maximum</a>
+            <ul class="flex reverse verticalCenter">
+              <li class="col-7-12 left cell-26">
+                <h1 class="ae-1 fromLeft">How we work</h1>
+                <div class="ae-2 fromLeft">
+                  <p class="opacity-8">An electrician isn't an opinion former, but a graphic designer is. My argument is
+                    that all graphic designers hold high levels of responsibility in&nbsp;society.</p>
+                </div>
+                <div class="relative">
+                  <img src="assets/img/icon-1.png" class="ae-3 fromCenter app-26" alt="app" />
+                  <div class="text-26">
+                    <h3 class="ae-3 fromRight">Ember for Apple Watch</h3>
+                    <div class="ae-5 fromRight">
+                      <p class="tiny opacity-6">People don&rsquo;t use a product<br>because of the great&nbsp;design.
+                      </p>
+                    </div>
+                  </div>
+                </div>
               </li>
-              <li class="col-1-12">&nbsp;</li>
-              <li class="col-5-12 bottom">
-                <img src="assets/img/maximum1.jpg" data-action="zoom" class="shadow rounded ae-8"
-                  alt="MiniOS Minimum" />
+              <li class="col-5-12">
+                <div class="fix-4-12 center">
+                  <ul class="slider clickable ae-1 fromAbove" data-slider-id="26-3">
+                    <li class="selected"><img src="assets/img/watch-26-1.png" alt="Apple Watch Thumbnail" /></li>
+                    <li><img src="assets/img/watch-26-2.png" alt="Apple Watch Thumbnail" /></li>
+                    <li><img src="assets/img/watch-26-1.png" alt="Apple Watch Thumbnail" /></li>
+                    <li><img src="assets/img/watch-26-2.png" alt="Apple Watch Thumbnail" /></li>
+                  </ul>
+                  <ul class="controller dots ae-3 fromCenter margin-top-3" data-slider-id="26-3">
+                    <li class="dot selected"></li>
+                    <li class="dot"></li>
+                    <li class="dot"></li>
+                    <li class="dot"></li>
+                  </ul>
+                </div>
               </li>
             </ul>
           </div>
@@ -334,33 +488,6 @@
       </div>
     </div>
     <div class="background" style="background-image:url(assets/img/background/background-fire.jpg)"></div>
-  </section>
-
-  <!-- Slide 4 (#26) -->
-  <section class="slide fade-6 kenBurns">
-    <div class="content">
-      <div class="container">
-        <div class="wrap">
-
-          <div class="fix-12-12">
-            <ul class="flex fixedSpaces verticalCenter reverse">
-              <li class="col-6-12 left middle">
-                <h1 class="ae-1 fromLeft">MiniOS Ultra</h1>
-                <p class="ae-2 fromLeft"><span class="opacity-8">is the smallest MiniOS and provides a basic Xfce desktop with minimal functionality.</span></p>
-                <a class="button green gradient ae-3 fromCenter cropLeft">Download MiniOS Ultra</a>
-              </li>
-              <li class="col-1-12">&nbsp;</li>
-              <li class="col-5-12 bottom">
-                <img src="assets/img/ultra1.jpg" data-action="zoom" class="shadow rounded ae-8"
-                  alt="MiniOS Minimum" />
-              </li>
-            </ul>
-          </div>
-
-        </div>
-      </div>
-    </div>
-    <div class="background" style="background-image:url(assets/img/background/background-black.jpg)"></div>
   </section>
 
   <!-- Slide 5 (#91) -->
