--- a/index.html
+++ b/index.html
@@ -266,10 +266,7 @@
           <div class="fix-12-12">
             <ul class="grid">
               <li class="col-6-12 left">
-                <h1 class="ae-2 fromLeft">Krabi Island</h1>
-                <p class="ae-3 fromLeft"><span class="opacity-8">An electrician isn’t an opinion former, but a graphic
-                    designer is. My argument is that all graphic designers hold high levels of responsibility in
-                    society.</span></p>
+                <h1 class="ae-2 fromLeft">Large selection of editions.</h1>
                 <ul class="tabs controller uppercase bold ae-4 fromCenter" data-slider-id="60-1">
                   <li class="selected">MiniOS Minimum</li>
                   <li>MiniOS Standard</li>
@@ -282,18 +279,22 @@
                   <li class="selected fromCenter">
                     <img src="assets/img/minimum1.jpg" data-action="zoom" class="shadow rounded ae-8"
                       alt="MiniOS Minimum" />
+                    <p><span class="opacity-8">MiniOS Minimum is the smallest MiniOS and provides a basic Xfce desktop with minimal functionality.</span></p>
                   </li>
                   <li class="fromCenter">
                     <img src="assets/img/standard1.jpg" data-action="zoom" class="shadow rounded ae-8"
                       alt="MiniOS Standard" />
+                      <p><span class="opacity-8">MiniOS Minimum is the smallest MiniOS and provides a basic Xfce desktop with minimal functionality.</span></p>
                   </li>
                   <li class="fromCenter">
                     <img src="assets/img/maximum1.jpg" data-action="zoom" class="shadow rounded ae-8"
                       alt="MiniOS Maximum" />
+                      <p><span class="opacity-8">MiniOS Minimum is the smallest MiniOS and provides a basic Xfce desktop with minimal functionality.</span></p>
                   </li>
                   <li class="fromCenter">
                     <img src="assets/img/ultra1.jpg" data-action="zoom" class="shadow rounded ae-8"
                       alt="MiniOS Ultra" />
+                      <p><span class="opacity-8">MiniOS Minimum is the smallest MiniOS and provides a basic Xfce desktop with minimal functionality.</span></p>
                   </li>
                 </ul>
               </li>
