--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
           <div class="fix-12-12">
             <ul class="grid">
               <li class="col-6-12 left">
-                <h1 class="ae-2 fromLeft">Large selection of editions.</h1>
+                <h1 class="ae-2 fromLeft">Choose your MiniOS</h1>
                 <ul class="tabs controller uppercase bold ae-4 fromCenter" data-slider-id="60-1">
                   <li class="selected">MiniOS Minimum</li>
                   <li>MiniOS Standard</li>
