--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
           <li><a href="https://github.com/minios-linux/minios-live" target="_blank">Source code</a></li>
         </ul>
       </div>
-      <div class="right"><a class="button green gradient" href="#">Download</a></div>
+      <class="right"></div>
     </div>
     <div class="sections compact">
       <div class="left"><a href="#" title="MiniOS"><svg style="width:82px;height:24px">
@@ -264,39 +264,14 @@
         <div class="wrap">
 
           <div class="fix-12-12">
-            <ul class="grid">
-              <li class="col-6-12 left">
-                <h1 class="ae-2 fromLeft">Choose your MiniOS</h1>
-                <ul class="tabs controller uppercase bold ae-4 fromCenter" data-slider-id="60-1">
-                  <li class="selected">MiniOS Minimum</li>
-                  <li>MiniOS Standard</li>
-                  <li>MiniOS Maximum</li>
-                  <li>MiniOS Ultra</li>
-                </ul>
+            <ul class="flex fixedSpaces verticalCenter reverse">
+              <li class="col-6-12 left middle">
+                <h1 class="ae-1 fromLeft">MiniOS 11.3</h1>
+                <p class="ae-2 fromLeft"><span class="opacity-8">Fast. Simple. Reliable.</span></p>
+                <a class="button green gradient ae-3 fromCenter cropLeft">Download</a><a class="button blue gradient ae-4 fromCenter">Installation Instructions</a>
               </li>
-              <li class="col-6-12 left ae-5 fromCenter">
-                <ul class="slider animated margin-top-4" data-slider-id="60-1">
-                  <li class="selected fromCenter">
-                    <img src="assets/img/minimum1.jpg" data-action="zoom" class="shadow rounded ae-8"
-                      alt="MiniOS Minimum" />
-                    <p><span class="opacity-8">MiniOS Minimum is the smallest MiniOS and provides a basic Xfce desktop with minimal functionality.</span></p>
-                  </li>
-                  <li class="fromCenter">
-                    <img src="assets/img/standard1.jpg" data-action="zoom" class="shadow rounded ae-8"
-                      alt="MiniOS Standard" />
-                      <p><span class="opacity-8">MiniOS Minimum is the smallest MiniOS and provides a basic Xfce desktop with minimal functionality.</span></p>
-                  </li>
-                  <li class="fromCenter">
-                    <img src="assets/img/maximum1.jpg" data-action="zoom" class="shadow rounded ae-8"
-                      alt="MiniOS Maximum" />
-                      <p><span class="opacity-8">MiniOS Minimum is the smallest MiniOS and provides a basic Xfce desktop with minimal functionality.</span></p>
-                  </li>
-                  <li class="fromCenter">
-                    <img src="assets/img/ultra1.jpg" data-action="zoom" class="shadow rounded ae-8"
-                      alt="MiniOS Ultra" />
-                      <p><span class="opacity-8">MiniOS Minimum is the smallest MiniOS and provides a basic Xfce desktop with minimal functionality.</span></p>
-                  </li>
-                </ul>
+              <li class="col-6-12">
+                <img class="ae-4" width="605" src="assets/img/standard1.jpg" alt="MiniOS Standard" data-action="zoom"/>
               </li>
             </ul>
           </div>
@@ -304,7 +279,7 @@
         </div>
       </div>
     </div>
-    <div class="background" style="background-image:url(assets/img/background/background-jungle.jpg)"></div>
+    <div class="background" style="background-image:url(assets/img/background/background-sea.jpg)"></div>
   </section>
 
   <!-- Slide 2 (#60) -->
@@ -320,26 +295,26 @@
                 <p class="ae-3 fromLeft"><span class="opacity-8">An electrician isn’t an opinion former, but a graphic
                     designer is. My argument is that all graphic designers hold high levels of responsibility in
                     society.</span></p>
-                <ul class="tabs controller uppercase bold ae-4 fromCenter" data-slider-id="60-1">
+                <ul class="tabs controller uppercase bold ae-4 fromCenter" data-slider-id="61-0">
                   <li class="selected">Krabi Island</li>
                   <li>Community</li>
                   <li>Surfing</li>
                 </ul>
               </li>
               <li class="col-6-12 left ae-5 fromCenter">
-                <ul class="slider animated margin-top-4" data-slider-id="60-1">
+                <ul class="slider animated margin-top-4" data-slider-id="61-1">
                   <li class="selected fromCenter">
-                    <div class="popupTrigger videoThumbnail shadow rounded" data-popup-id="60-1">
+                    <div class="popupTrigger videoThumbnail shadow rounded" data-popup-id="61-1">
                       <img class="wide" src="assets/img/gallery-60-1.jpg" alt="Video Thumbnail" />
                     </div>
                   </li>
                   <li class="fromCenter">
-                    <div class="popupTrigger videoThumbnail shadow rounded" data-popup-id="60-2">
+                    <div class="popupTrigger videoThumbnail shadow rounded" data-popup-id="61-2">
                       <img class="wide" src="assets/img/gallery-60-2.jpg" alt="Video Thumbnail" />
                     </div>
                   </li>
                   <li class="fromCenter">
-                    <div class="popupTrigger videoThumbnail shadow rounded" data-popup-id="60-3">
+                    <div class="popupTrigger videoThumbnail shadow rounded" data-popup-id="61-3">
                       <img class="wide" src="assets/img/gallery-60-3.jpg" alt="Video Thumbnail" />
                     </div>
                   </li>
@@ -356,7 +331,7 @@
 
 
   <!-- Popup Video -->
-  <div class="popup autoplay" data-popup-id="60-1">
+  <div class="popup autoplay" data-popup-id="61-1">
     <div class="close"><svg>
         <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#close"></use>
       </svg></div>
@@ -376,7 +351,7 @@
 
 
   <!-- Popup Video -->
-  <div class="popup autoplay" data-popup-id="60-2">
+  <div class="popup autoplay" data-popup-id="61-2">
     <div class="close"><svg>
         <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#close"></use>
       </svg></div>
@@ -396,7 +371,7 @@
 
 
   <!-- Popup Video -->
-  <div class="popup autoplay" data-popup-id="60-3">
+  <div class="popup autoplay" data-popup-id="61-3">
     <div class="close"><svg>
         <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#close"></use>
       </svg></div>
@@ -413,7 +388,6 @@
       </div>
     </div>
   </div>
-
 
   <!-- Slide 3 (#27) -->
   <section class="slide fade-6 kenBurns">
