--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
           <li><a href="https://github.com/minios-linux/minios-live" target="_blank">Source code</a></li>
         </ul>
       </div>
-      <class="right"></div>
+      <div class="right"><a class="button gray gradient" href="#">Russian</a></div>
     </div>
     <div class="sections compact">
       <div class="left"><a href="#" title="MiniOS"><svg style="width:82px;height:24px">
@@ -236,6 +236,7 @@
           </svg></span></div>
     </div>
   </nav>
+
 
   <!-- Sidebar -->
   <nav class="sidebar" data-sidebar-id="1">
@@ -268,10 +269,11 @@
               <li class="col-6-12 left middle">
                 <h1 class="ae-1 fromLeft">MiniOS 11.3</h1>
                 <p class="ae-2 fromLeft"><span class="opacity-8">Fast. Simple. Reliable.</span></p>
-                <a class="button green gradient ae-3 fromCenter cropLeft">Download</a><a class="button blue gradient ae-4 fromCenter">Installation Instructions</a>
+                <a class="button green gradient ae-3 fromCenter cropLeft">Download</a><a
+                  class="button blue gradient ae-4 fromCenter">Installation Instructions</a>
               </li>
               <li class="col-6-12">
-                <img class="ae-4" width="605" src="assets/img/standard1.jpg" alt="MiniOS Standard" data-action="zoom"/>
+                <img class="ae-4" width="605" src="assets/img/standard1.jpg" alt="MiniOS Standard" data-action="zoom" />
               </li>
             </ul>
           </div>
