--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
             <ul class="grid grid-83 noSpaces equal ae-2 fadeIn">
               <li class="col-3-12 ae-3">
                 <h3>Minimum</h3>
-                <div class="price ae-5"><span class="currency">$</span>0</div>
+                <div class="price ae-5"><span class="currency">MB</span>365</div>
                 <div class="ae-5">
                   <h6 class="uppercase bold small opacity-4">No Credit Card Needed</h6>
                 </div>
@@ -310,7 +310,7 @@
               </li>
               <li class="col-3-12 ae-4">
                 <h3>Standard</h3>
-                <div class="price ae-6"><span class="currency">$</span>6</div>
+                <div class="price ae-6"><span class="currency">MB</span>540</div>
                 <div class="ae-6">
                   <h6 class="uppercase bold small opacity-4">Billed per Month</h6>
                 </div>
@@ -327,7 +327,7 @@
               </li>
               <li class="col-3-12 ae-5">
                 <h3>Maximum</h3>
-                <div class="price ae-7"><span class="currency">$</span>24</div>
+                <div class="price ae-7"><span class="currency">MB</span>625</div>
                 <div class="ae-7">
                   <h6 class="uppercase bold small opacity-4">Billed per Month</h6>
                 </div>
@@ -345,7 +345,7 @@
               </li>
               <li class="col-3-12 ae-6">
                 <h3>Ultra</h3>
-                <div class="price ae-8"><span class="currency">$</span>24</div>
+                <div class="price ae-8"><span class="currency">GB</span>1.4</div>
                 <div class="ae-7">
                   <h6 class="uppercase bold small opacity-4">Billed per Month</h6>
                 </div>
