--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
               </li>
               <li class="col-3-12 ae-6">
                 <h3>Ultra</h3>
-                <div class="price ae-8"><span class="currency">GB</span>1.4</div>
+                <div class="price ae-8"><span class="currency">MB</span>1350</div>
                 <div class="ae-7">
                   <h6 class="uppercase bold small opacity-4">Billed per Month</h6>
                 </div>
