--- a/index.html
+++ b/index.html
@@ -213,8 +213,8 @@
   <!-- Panel Top #05 -->
   <nav class="panel top">
     <div class="sections desktop">
-      <div class="left"><a href="#" title="MiniOS"><svg style="width:82px;height:24px">
-            <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#logo"></use>
+      <div class="left"><a href="#" title="MiniOS"><svg style="width:30px;height:30px">
+            <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#logo-icon"></use>
           </svg></a></div>
       <div class="center">
         <ul class="menu">
@@ -228,8 +228,8 @@
       <div class="right"><a class="button gray gradient" href="#">Russian</a></div>
     </div>
     <div class="sections compact">
-      <div class="left"><a href="#" title="MiniOS"><svg style="width:82px;height:24px">
-            <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#logo"></use>
+      <div class="left"><a href="#" title="MiniOS"><svg style="width:30px;height:30px">
+            <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#logo-icon"></use>
           </svg></a></div>
       <div class="right"><span class="button actionButton sidebarTrigger" data-sidebar-id="1"><svg>
             <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#menu"></use>
@@ -244,8 +244,8 @@
         <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#close"></use>
       </svg></div>
     <div class="content">
-      <a href="#" class="logo"><svg width="37" height="30">
-          <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#logo-icon"></use>
+      <a href="#" class="logo"><svg width="82" height="24">
+          <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#logo"></use>
         </svg></a>
       <ul class="mainMenu margin-top-3">
         <li><a href="https://t.me/minios_news" target="_blank">News</a></li>
@@ -269,8 +269,8 @@
               <li class="col-6-12 left middle">
                 <h1 class="ae-1 fromLeft">MiniOS 11.3</h1>
                 <p class="ae-2 fromLeft"><span class="opacity-8">Fast. Simple. Reliable.</span></p>
-                <a class="button green gradient ae-3 fromCenter cropLeft">Download</a><a
-                  class="button blue gradient ae-4 fromCenter">Installation Instructions</a>
+                <a class="button green gradient ae-3 fromCenter cropLeft">Download</a>
+                <a class="button blue gradient ae-4 fromCenter">Installation Instructions</a>
               </li>
               <li class="col-6-12">
                 <img class="ae-4" width="605" src="assets/img/standard1.jpg" alt="MiniOS Standard" data-action="zoom" />
@@ -297,30 +297,26 @@
                 <h3>Minimum</h3>
                 <div class="price ae-5"><span class="currency">MB</span>365</div>
                 <div class="ae-5">
-                  <h6 class="uppercase bold small opacity-4">No Credit Card Needed</h6>
+                  <h6 class="uppercase bold small opacity-4">xz compression</h6>
                 </div>
                 <div class="margin-top-3 margin-bottom-3 equalElement ae-6">
                   <ul class="p tiny">
-                    <li><strong>25 Free Images</strong></li>
-                    <li class="opacity-7">Custom Domain</li>
-                    <li class="opacity-7">24/7 Customer Support</li>
+                    <li class="opacity-7">The smallest edition of MiniOS, includes a minimal Xfce environment and a
+                      basic set of software.</li>
                   </ul>
                 </div>
-                <a href="#" class="button blue gradient wide cropSides cropBottom ae-7">Try Free</a>
+                <a href="#" class="button green gradient wide cropSides cropBottom ae-7">Download Minimum</a>
               </li>
               <li class="col-3-12 ae-4">
                 <h3>Standard</h3>
                 <div class="price ae-6"><span class="currency">MB</span>540</div>
                 <div class="ae-6">
-                  <h6 class="uppercase bold small opacity-4">Billed per Month</h6>
+                  <h6 class="uppercase bold small opacity-4">zstd compression</h6>
                 </div>
                 <div class="margin-top-3 margin-bottom-3 equalElement ae-7">
                   <ul class="p tiny">
-                    <li><strong>60 Free Images</strong></li>
-                    <li><strong>Mobile-Optimized</strong></li>
-                    <li><strong>No Transaction Fees</strong></li>
-                    <li class="opacity-8">Custom Domain</li>
-                    <li class="opacity-8">24/7 Customer Support</li>
+                    <li class="opacity-8">The standard edition of MiniOS includes the Xfce environment, additional
+                      console utilities, and more user-friendly software.</li>
                   </ul>
                 </div>
                 <a href="#" class="button green gradient wide cropSides cropBottom ae-8">Purchase</a>
@@ -329,7 +325,7 @@
                 <h3>Maximum</h3>
                 <div class="price ae-7"><span class="currency">MB</span>625</div>
                 <div class="ae-7">
-                  <h6 class="uppercase bold small opacity-4">Billed per Month</h6>
+                  <h6 class="uppercase bold small opacity-4">zstd compression</h6>
                 </div>
                 <div class="margin-top-3 margin-bottom-3 equalElement ae-8">
                   <ul class="p tiny">
@@ -347,7 +343,7 @@
                 <h3>Ultra</h3>
                 <div class="price ae-8"><span class="currency">MB</span>1350</div>
                 <div class="ae-7">
-                  <h6 class="uppercase bold small opacity-4">Billed per Month</h6>
+                  <h6 class="uppercase bold small opacity-4">zstd compression</h6>
                 </div>
                 <div class="margin-top-3 margin-bottom-3 equalElement ae-9">
                   <ul class="p tiny">
