--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
                       basic set of software.</li>
                   </ul>
                 </div>
-                <a href="#" class="button green gradient wide cropSides cropBottom ae-7">Download Minimum</a>
+                <a href="#" class="button green gradient wide cropSides cropBottom ae-7">Download</a>
               </li>
               <li class="col-3-12 ae-4">
                 <h3>Standard</h3>
@@ -319,7 +319,7 @@
                       console utilities, and more user-friendly software.</li>
                   </ul>
                 </div>
-                <a href="#" class="button green gradient wide cropSides cropBottom ae-8">Purchase</a>
+                <a href="#" class="button green gradient wide cropSides cropBottom ae-8">Download</a>
               </li>
               <li class="col-3-12 ae-5">
                 <h3>Maximum</h3>
@@ -337,7 +337,7 @@
                     <li class="opacity-8">24/7 Customer Support</li>
                   </ul>
                 </div>
-                <a href="#" class="button green gradient wide cropSides cropBottom ae-9">Purchase</a>
+                <a href="#" class="button green gradient wide cropSides cropBottom ae-9">Download</a>
               </li>
               <li class="col-3-12 ae-6">
                 <h3>Ultra</h3>
@@ -355,7 +355,7 @@
                     <li class="opacity-8">24/7 Customer Support</li>
                   </ul>
                 </div>
-                <a href="#" class="button green gradient wide cropSides cropBottom ae-10">Purchase</a>
+                <a href="#" class="button green gradient wide cropSides cropBottom ae-10">Download</a>
               </li>
             </ul>
           </div>
