--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
 
           <div class="fix-12-12">
             <ul class="flex fixedSpaces verticalCenter reverse">
-              <li class="col-6-12 left middle">
+              <li class="col-6-12 center middle">
                 <h1 class="ae-1 fromLeft">MiniOS 11.3</h1>
                 <p class="ae-2 fromLeft"><span class="opacity-8">Fast. Simple. Reliable.</span></p>
                 <a class="button green gradient ae-3 fromCenter cropLeft">Download</a>
@@ -315,8 +315,7 @@
                 </div>
                 <div class="margin-top-3 margin-bottom-3 equalElement ae-7">
                   <ul class="p tiny">
-                    <li class="opacity-8">The standard edition of MiniOS includes the Xfce environment, additional
-                      console utilities, and more user-friendly software.</li>
+                    <li class="opacity-8">The standard edition of MiniOS includes the Xfce environment, additional console utilities, non-free firmware, and more user-friendly software.</li>
                   </ul>
                 </div>
                 <a href="#" class="button green gradient wide cropSides cropBottom ae-8">Download</a>
