--- a/index.html
+++ b/index.html
@@ -267,10 +267,10 @@
           <div class="fix-12-12">
             <ul class="flex fixedSpaces verticalCenter reverse">
               <li class="col-6-12 center middle">
-                <h1 class="ae-1 fromLeft">MiniOS 11.3</h1>
+                <h1 class="ae-1 fromLeft"><svg style="height:40px;"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#logo"></use></svg></h1>
                 <p class="ae-2 fromLeft"><span class="opacity-8">Fast. Simple. Reliable.</span></p>
                 <a class="button green gradient ae-3 fromCenter cropLeft">Download</a>
-                <a class="button blue gradient ae-4 fromCenter">Installation Instructions</a>
+                <a class="button blue gradient ae-4 fromCenter">Instructions</a>
               </li>
               <li class="col-6-12">
                 <img class="ae-4" width="605" src="assets/img/standard1.jpg" alt="MiniOS Standard" data-action="zoom" />
