--- a/index.html
+++ b/index.html
@@ -267,13 +267,16 @@
           <div class="fix-12-12">
             <ul class="flex fixedSpaces verticalCenter reverse">
               <li class="col-6-12 center middle">
-                <h1 class="ae-1 fromLeft"><svg style="height:40px;"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#logo"></use></svg></h1>
+                <h1 class="ae-1 fromLeft"><svg style="height:40px;">
+                    <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#logo"></use>
+                  </svg></h1>
                 <p class="ae-2 fromLeft"><span class="opacity-8">Fast. Simple. Reliable.</span></p>
                 <a class="button green gradient ae-3 fromCenter cropLeft">Download</a>
                 <a class="button blue gradient ae-4 fromCenter">Instructions</a>
               </li>
               <li class="col-6-12">
-                <img class="ae-4" width="605" src="assets/img/standard1.jpg" alt="MiniOS Standard" data-action="zoom" />
+                <img class="ae-4 rounded" width="605" src="assets/img/standard1.jpg" alt="MiniOS Standard"
+                  data-action="zoom" />
               </li>
             </ul>
           </div>
@@ -315,7 +318,8 @@
                 </div>
                 <div class="margin-top-3 margin-bottom-3 equalElement ae-7">
                   <ul class="p tiny">
-                    <li class="opacity-8">The standard edition of MiniOS includes the Xfce environment, additional console utilities, non-free firmware, and more user-friendly software.</li>
+                    <li class="opacity-8">The standard edition of MiniOS includes the Xfce environment, additional
+                      console utilities, non-free firmware, and more user-friendly software.</li>
                   </ul>
                 </div>
                 <a href="#" class="button green gradient wide cropSides cropBottom ae-8">Download</a>
