--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
         <div class="wrap">
 
           <div class="fix-12-12">
-            <h1 class="ae-1">Choose Your MiniOS</h1>
+            <h1 class="ae-1">Choose Your Edition</h1>
             <ul class="grid grid-83 noSpaces equal ae-2 fadeIn">
               <li class="col-3-12 ae-3">
                 <h3>Minimum</h3>
@@ -304,7 +304,8 @@
                 </div>
                 <div class="margin-top-3 margin-bottom-3 equalElement ae-6">
                   <ul class="p tiny">
-                    <li class="opacity-7">The smallest edition of MiniOS, includes a minimal Xfce environment and a
+                    <li><strong>The smallest edition of MiniOS</strong></li>
+                    <li class="opacity-7">includes a minimal Xfce environment and a
                       basic set of software.</li>
                   </ul>
                 </div>
@@ -318,7 +319,8 @@
                 </div>
                 <div class="margin-top-3 margin-bottom-3 equalElement ae-7">
                   <ul class="p tiny">
-                    <li class="opacity-8">The standard edition of MiniOS includes the Xfce environment, additional
+                    <li><strong>The standard edition of MiniOS</strong></li>
+                    <li class="opacity-8">includes the Xfce environment, additional
                       console utilities, non-free firmware, and more user-friendly software.</li>
                   </ul>
                 </div>
@@ -332,12 +334,8 @@
                 </div>
                 <div class="margin-top-3 margin-bottom-3 equalElement ae-8">
                   <ul class="p tiny">
-                    <li><strong>60 Free Images</strong></li>
-                    <li><strong>Mobile-Optimized</strong></li>
-                    <li><strong>No Transaction Fees</strong></li>
-                    <li><strong>Unlimited Projects</strong></li>
-                    <li class="opacity-8">Custom Domain</li>
-                    <li class="opacity-8">24/7 Customer Support</li>
+                    <li><strong>The maximal edition of MiniOS</strong></li>
+                    <li class="opacity-8">includes the Xfce environment, additional console utilities, non-free firmware, additional drivers and software for daily PC use and maintenance.</li>
                   </ul>
                 </div>
                 <a href="#" class="button green gradient wide cropSides cropBottom ae-9">Download</a>
@@ -350,12 +348,8 @@
                 </div>
                 <div class="margin-top-3 margin-bottom-3 equalElement ae-9">
                   <ul class="p tiny">
-                    <li><strong>60 Free Images</strong></li>
-                    <li><strong>Mobile-Optimized</strong></li>
-                    <li><strong>No Transaction Fees</strong></li>
-                    <li><strong>Unlimited Projects</strong></li>
-                    <li class="opacity-8">Custom Domain</li>
-                    <li class="opacity-8">24/7 Customer Support</li>
+                    <li><strong>The ultimate edition of MiniOS</strong></li>
+                    <li class="opacity-8">includes the Xfce environment, additional console utilities, non-free firmware, additional drivers, software for daily use, development, virtualization and PC maintenance.</li>
                   </ul>
                 </div>
                 <a href="#" class="button green gradient wide cropSides cropBottom ae-10">Download</a>
