--- a/index.html
+++ b/index.html
@@ -271,8 +271,8 @@
                     <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#logo"></use>
                   </svg></h1>
                 <p class="ae-2 fromLeft"><span class="opacity-8">Fast. Simple. Reliable.</span></p>
-                <a class="button green gradient ae-3 fromCenter cropLeft">Download</a>
-                <a class="button blue gradient ae-4 fromCenter">Instructions</a>
+                <a href="#downloads" class="button green gradient ae-3 fromCenter cropLeft">Download</a>
+                <a href="#instructions" class="button blue gradient ae-4 fromCenter">Instructions</a>
               </li>
               <li class="col-6-12">
                 <img class="ae-4 rounded" width="605" src="assets/img/standard1.jpg" alt="MiniOS Standard"
@@ -288,7 +288,7 @@
   </section>
 
   <!-- Slide 6 (#83) -->
-  <section class="slide fade-6 kenBurns">
+  <section class="slide fade-6 kenBurns" id="downloads">
     <div class="content">
       <div class="container">
         <div class="wrap">
