--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
         <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#close"></use>
       </svg></div>
     <div class="content">
-      <a href="#" class="logo"><svg width="82" height="24">
+      <a href="#" class="logo"><svg width="106" height="25">
           <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#logo"></use>
         </svg></a>
       <ul class="mainMenu margin-top-3">
@@ -271,7 +271,7 @@
             <ul class="flex fixedSpaces verticalCenter reverse">
               <li class="col-6-12 center middle">
                 <p></p>
-                <h1 class="ae-1 fromLeft"><svg style="height:35px;">
+                <h1 class="ae-1 fromLeft center"><svg style="height:35px;">
                     <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#logo"></use>
                   </svg></h1>
                 <p class="ae-2 fromLeft"><span class="opacity-8">Fast. Simple. Reliable.</span></p>
