--- a/index.html
+++ b/index.html
@@ -269,11 +269,10 @@
 
           <div class="fix-12-12">
             <ul class="flex fixedSpaces verticalCenter reverse">
-              <li class="col-6-12 center middle">
-                <p></p>
-                <h1 class="ae-1 fromLeft center"><svg style="height:35px;">
+              <li class="col-6-12 center middle wrap">
+                <h1 class="ae-1 fromLeft"><svg style="height:35px;">
                     <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#logo"></use>
-                  </svg></h1><p></p>
+                  </svg></h1>
                 <p class="ae-2 fromLeft"><span class="opacity-8">Fast. Simple. Reliable.</span></p>
                 <a href="#downloads" class="button green gradient ae-3 fromCenter cropLeft">Download</a>
                 <a href="#instructions" class="button blue gradient ae-4 fromCenter">Instructions</a>
