--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
 
           <div class="fix-12-12">
             <ul class="flex fixedSpaces verticalCenter reverse">
-              <li class="col-6-12 center middle wrap">
+              <li class="col-6-12 middle wrap">
                 <h1 class="ae-1 fromLeft"><svg style="height:35px;">
                     <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#logo"></use>
                   </svg></h1>
