--- a/index.html
+++ b/index.html
@@ -269,11 +269,20 @@
         </svg></a>
       <ul class="mainMenu margin-top-3">
         <li><a href="#">Home</a></li>
-        <li><a href="https://t.me/minios_news" target="_blank">News</a></li>
-        <li><a href="https://t.me/minios_chat" target="_blank">Discussion</a></li>
-        <li><a href="https://github.com/minios-linux/minios-live/wiki/MiniOS-Docs" target="_blank">Documentation</a>
+        <li><a href="https://t.me/minios_news" target="_blank"><svg style="height:21px;">
+              <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#telegram"></use>
+            </svg> News</a></li>
+        <li><a href="https://t.me/minios_chat" target="_blank"><svg style="height:21px;">
+              <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#telegram"></use>
+            </svg> Discussion</a></li>
+        <li><a href="https://github.com/minios-linux/minios-live/wiki/MiniOS-Docs" target="_blank"><svg
+              style="height:21px;">
+              <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#github"></use>
+            </svg> Documentation</a>
         </li>
-        <li><a href="https://github.com/minios-linux/minios-live" target="_blank">Source code</a></li>
+        <li><a href="https://github.com/minios-linux/minios-live" target="_blank"><svg style="height:21px;">
+              <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#github"></use>
+            </svg> Source code</a></li>
         <li><a href="#screenshots">Screenshots</a></li>
       </ul>
     </div>
