--- a/index_ru.html
+++ b/index_ru.html
@@ -270,12 +270,20 @@
                 </svg></a>
             <ul class="mainMenu margin-top-3">
                 <li><a href="#">Главная</a></li>
-                <li><a href="https://t.me/minios_news" target="_blank">Новости</a></li>
-                <li><a href="https://t.me/minios_chat" target="_blank">Обсуждение</a></li>
-                <li><a href="https://github.com/minios-linux/minios-live/wiki/MiniOS-Docs"
-                        target="_blank">Документация</a>
+                <li><a href="https://t.me/minios_news" target="_blank"><svg style="height:21px;">
+                            <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#telegram"></use>
+                        </svg> Новости</a></li>
+                <li><a href="https://t.me/minios_chat" target="_blank"><svg style="height:21px;">
+                            <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#telegram"></use>
+                        </svg> Обсуждение</a></li>
+                <li><a href="https://github.com/minios-linux/minios-live/wiki/MiniOS-Docs" target="_blank"><svg
+                            style="height:21px;">
+                            <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#github"></use>
+                        </svg> Документация</a>
                 </li>
-                <li><a href="https://github.com/minios-linux/minios-live" target="_blank">Исходный код</a></li>
+                <li><a href="https://github.com/minios-linux/minios-live" target="_blank"><svg style="height:21px;">
+                            <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#github"></use>
+                        </svg> Исходный код</a></li>
                 <li><a href="#screenshots">Скриншоты</a></li>
             </ul>
         </div>
